add slave alternative for libnvcuvid.so
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5914 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.96-3) UNRELEASED; urgency=medium
+
+  * Add slave alternative for libnvcuvid.so.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 28 Nov 2015 02:28:29 +0100
+
 nvidia-graphics-drivers (340.96-2) unstable; urgency=medium
 
   * New upstream legacy 340xx branch release 340.96 (2015-11-16).
