--- a/debian/changelog
+++ b/debian/changelog
@@ -131,6 +131,7 @@ nvidia-graphics-drivers (358.16-1) UNRELEASED; urgency=medium
     - Removed debian/module/Makefile, debian/module/conftest.sh
     - Modules build on 4.2, update rules.def
     - debian/module/conftest/patches.h is no longer a symlink
+    - Add modprobe.conf rules for the new nvidia-modeset module
   * Added new libglvnd-nvidia package, dependency of new libEGL.so.1,
     ships vendor-neutral GL libraries
   * Updated libegl1-nvidia, upstream now ships libEGL.so.1
