--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nvidia-graphics-drivers (340.96-4) UNRELEASED; urgency=medium
 
-  [Luca Boccassi]
+  [ Andreas Beckmann ]
+  * Do not run dh_strip_nondeterminism, it may perform modifications not
+    permitted by the NVIDIA license.
+
+  [ Luca Boccassi ]
   * bug-script: collect Xorg log from journalctl if running on systemd
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 14 Dec 2015 15:19:08 +0000
