download *.run with wget from http download server to preserve timestamps
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5967 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (340.96-4) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Do not run dh_strip_nondeterminism, it may perform modifications not
     permitted by the NVIDIA license.
+  * get-orig-source: Download *.run with wget from http download server to
+    preserve timestamps.
   * get-orig-source: Generate tarball reproducibly.
   * Update lintian overrides.
 
