finalize changelog for nvidia-graphics-drivers (340.96-4)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5969 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.96-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.96-4) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * Do not run dh_strip_nondeterminism, it may perform modifications not
@@ -11,7 +11,7 @@ nvidia-graphics-drivers (340.96-4) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * bug-script: collect Xorg log from journalctl if running on systemd
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 14 Dec 2015 15:19:08 +0000
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Jan 2016 19:55:26 +0100
 
 nvidia-graphics-drivers (340.96-3) unstable; urgency=medium
 
