--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+nvidia-graphics-drivers (340.96-1+) UNRELEASED; urgency=medium
+
+  [ Andreas Beckmann ]
+  * Do not run dh_strip_nondeterminism, it may perform modifications not
+    permitted by the NVIDIA license.
+  * get-orig-source: Download *.run with wget from http download server to
+    preserve timestamps.
+  * get-orig-source: Generate tarball reproducibly.
+  * Update lintian overrides.
+
+  [ Luca Boccassi ]
+  * bug-script: collect Xorg log from journalctl if running on systemd
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 11:34:10 +0100
+
 nvidia-graphics-drivers (340.96-1) jessie; urgency=medium
 
   * New upstream legacy 340xx branch release 340.96 (2015-11-16).
