--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
+
+  * Do not run dh_strip_nondeterminism, it may perform modifications not
+    permitted by the NVIDIA license.
+  * rules, rules.defs: Synchronize variable naming with unstable (340.96-4).
+  * get-orig-source: Synchronize with unstable (340.96-4).
+  * bug-script: Synchronize with unstable (340.96-4).
+  * Update lintian overrides.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
+
 nvidia-graphics-drivers (304.131-1) wheezy; urgency=medium
 
   * New upstream legacy 304xx branch release 304.131 (2015-11-16).
