finalize changelog for nvidia-graphics-drivers (343.36-3), upload to unstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/343@6001 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers (343.36-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (343.36-3) unstable; urgency=low
 
   * Merge changes from 340.96-4.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 12:56:02 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 16:55:37 +0100
 
 nvidia-graphics-drivers (343.36-2) experimental; urgency=medium
 
