--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-nvidia-graphics-drivers (349.16-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (349.16-2) unstable; urgency=medium
 
   * uvm-symvers.patch: Explicitly copy Module.symvers from the nvidia.ko
     kernel module for use by the nvidia-uvm.ko module, since the dependencies
     in Kbuild seem not to work in all cases. This solution works with the dkms
     build, too.  (Closes: #812396, #812107)
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 23 Jan 2016 16:22:02 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 23 Jan 2016 17:03:28 +0100
 
 nvidia-graphics-drivers (349.16-1) unstable; urgency=low
 
