--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers (352.63-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.63-2) unstable; urgency=medium
 
   * Merge changes from 349.16-2.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 23 Jan 2016 17:33:38 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 24 Jan 2016 07:59:24 +0100
 
 nvidia-graphics-drivers (352.63-1) experimental; urgency=medium
 
