--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (352.79-1) UNRELEASED; urgency=medium
       more than once.  This triggers undefined behavior, and in
       particular, if lock elision is enabled in glibc, may result
       in a segmentation fault.
+  * Update nv-readme.ids.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 25 Jan 2016 21:55:24 +0000
 
