dump dynamically generated conftest headers
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@6081 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (355.11-2) UNRELEASED; urgency=medium
+
+  * conftest-verbose.patch: New patch to dump dynamically generated conftest
+    headers.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 02 Feb 2016 02:10:07 +0100
+
 nvidia-graphics-drivers (355.11-1) experimental; urgency=medium
 
   [ Luca Boccassi ]
