--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (355.11-2) UNRELEASED; urgency=medium
 
   * conftest-verbose.patch: New patch to dump dynamically generated conftest
     headers.
+  * Pass only the kernel version via KERNEL_UNAME and let the new module build
+    system figure out the paths.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 02 Feb 2016 02:10:07 +0100
 
