--- a/debian/changelog
+++ b/debian/changelog
@@ -75,11 +75,11 @@ nvidia-graphics-drivers (358.16-1) UNRELEASED; urgency=medium
       Setting the environment variable __GL_DevShmPageableAllocations
       to 2 will disable this feature
   * Updated watch version to 358
-  * Updated kernel module build to adapt to the new upstream build system.
-      disable_modeset_conftest.patch
-      debian/rules for new build system and new nvidia-modeset module
-    - Add modprobe.conf rules for the new nvidia-modeset module
   * Update symbols control files.
+
+  [ Andreas Beckmann ]
+  * Updated kernel module build, patches and remaining infrastructure for the
+    new nvidia-modeset module.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 24 Nov 2015 02:15:05 +0100
 
