--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
+
+  * Update lintian overrides.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 02 Feb 2016 16:05:17 +0100
+
 nvidia-graphics-drivers (352.79-1) unstable; urgency=medium
 
   [ Luca Boccassi ]
