--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
 
+  * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 02 Feb 2016 16:05:17 +0100
