--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
 
+  * avoid-ld.gold.patch: Disable, hopefully this is no longer needed.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
