--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
     compiler instead of system default, thanks to Luca.
   * conftest-verbose.patch: New patch to dump dynamically generated conftest
     headers.
+  * conftest-via-kbuild.patch: New patch to call conftest.sh from within
+    kbuild (and therefore with kbuild's compiler and flags) as in 355.xx.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
