let the module build system figure out the paths from the kernel version
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6121 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
     headers.
   * conftest-via-kbuild.patch: New patch to call conftest.sh from within
     kbuild (and therefore with kbuild's compiler and flags) as in 355.xx.
+  * Pass only the kernel version via KERNEL_UNAME and let the module build
+    system figure out the paths.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
