--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
   * avoid-ld.gold.patch: Disable, hopefully this is no longer needed.
   * use-kbuild-compiler.patch: New patch to build with Kbuild's version of the
     compiler instead of system default, thanks to Luca.
+  * Use NVIDIA's conftest.sh script to determine settings during module build
+    instead of our manually maintained conftest.h header.
   * conftest-verbose.patch: New patch to dump dynamically generated conftest
     headers.
   * conftest-via-kbuild.patch: New patch to call conftest.sh from within
