--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
     kbuild (and therefore with kbuild's compiler and flags) as in 355.xx.
   * Pass only the kernel version via KERNEL_UNAME and let the module build
     system figure out the paths.
+  * Clear ARCH variable from environment before dkms build, thanks to Luca.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
