--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
 
+  [ Andreas Beckmann ]
   * avoid-ld.gold.patch: Disable, hopefully this is no longer needed.
   * use-kbuild-compiler.patch: New patch to build with Kbuild's version of the
     compiler instead of system default, thanks to Luca.
@@ -14,6 +15,11 @@ nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
   * Clear ARCH variable from environment before dkms build, thanks to Luca.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
+
+  [ Luca Boccassi ]
+  * ignore_xen_on_arm.patch: Update to add workaround for conftest.sh to fix
+    kernel module build failure on armhf by forcing XEN_PRESENT=0 when
+    building on armhf
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 02 Feb 2016 16:05:17 +0100
 
