--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,8 @@ nvidia-graphics-drivers (361.18-1) UNRELEASED; urgency=medium
   * libnvidia-fatbinaryloader: New package for FAT multiarch binary loader,
     needed by CUDA PXT JIT compiler.
   * libnvidia-ptxjitcompiler: New package for the CUDA PXT JIT compiler.
+  * Add dependency to libegl-nvidia package to nvidia-driver, otherwise
+    apt-get install nvidia-driver will not pull it in.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 07 Feb 2016 16:45:08 +0000
 
