Update libgl1-nvidia-glx files and symlinks. glvnd based library is now called libGL.so.1.0.0
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6144 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,7 @@ nvidia-graphics-drivers (361.28-1) UNRELEASED; urgency=medium
   * Add dependency to libegl-nvidia package to nvidia-driver, otherwise
     apt-get install nvidia-driver will not pull it in.
   * Update symbols files
+  * Updated libgl1-nvidia-glx package to ship libglvnd's version of libGL.so.1
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 07 Feb 2016 16:45:08 +0000
 
