--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,7 @@ nvidia-graphics-drivers (361.28-1) UNRELEASED; urgency=medium
     apt-get install nvidia-driver will not pull it in.
   * Update symbols files
   * Updated libgl1-nvidia-glx package to ship libglvnd's version of libGL.so.1
+    on i386 and amd64. Upstream ships only non-libglvnd libraries on ARM.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 07 Feb 2016 16:45:08 +0000
 
