split out a nvidia-legacy-check package
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6152 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nvidia-graphics-drivers (352.79-2) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
+  * Add nvidia-legacy-check package, taking over the check for legacy GPUs
+    from libgl1-nvidia-glx. Add the new package to the Pre-Depends of several
+    core packages.  (Closes: #813541)
   * avoid-ld.gold.patch: Disable, hopefully this is no longer needed.
   * use-kbuild-compiler.patch: New patch to build with Kbuild's version of the
     compiler instead of system default, thanks to Luca.
