--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nvidia-graphics-drivers\n"
 "Report-Msgid-Bugs-To: nvidia-graphics-drivers@packages.debian.org\n"
-"POT-Creation-Date: 2014-10-20 02:45+0200\n"
+"POT-Creation-Date: 2016-02-12 01:57+0100\n"
 "PO-Revision-Date: 2014-10-21 09:35+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -25,14 +25,14 @@ msgstr ""
 #. ${vendor} will be substituted with 'NVIDIA' or 'Fglrx' (without quotes, of
 #. course), ${free_name} will become 'Nouveau' or 'Radeon' (no quotes, again)
 #. and the ${*driver} variables will be replaced with package names.
-#: ../libgl1-nvidia-glx.templates:3001
+#: ../nvidia-legacy-check.templates:3001
 msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
 "Faut-il installer le pilote ${vendor} avec une carte graphique non gérée ?"
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:3001
+#: ../nvidia-legacy-check.templates:3001
 msgid ""
 "This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - for "
@@ -40,13 +40,13 @@ msgid ""
 "won't be usable:"
 msgstr ""
 "La carte graphique de cette machine n'est plus gérée par le pilote ${vendor} "
-"(paquet ${driver}). Vous pouvez préférer garder le paquet installé "
-"(par exemple pour piloter une autre carte), mais dans ce cas, la carte "
-"graphique suivante ne sera pas utilisable :"
+"(paquet ${driver}). Vous pouvez préférer garder le paquet installé (par "
+"exemple pour piloter une autre carte), mais dans ce cas, la carte graphique "
+"suivante ne sera pas utilisable :"
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:3001
+#: ../nvidia-legacy-check.templates:3001
 msgid ""
 "The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver})."
@@ -57,13 +57,18 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:3001
+#: ../nvidia-legacy-check.templates:3001
+msgid ""
+"Use the update-glx command to switch between different installed drivers."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../nvidia-legacy-check.templates:3001
 msgid ""
 "Before the ${free_name} driver can be used you must remove ${vendor} "
 "configuration from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Avant de pouvoir utiliser le pilote ${free_name}, il est nécessaire de "
-"supprimer la configuration "
-"de ${vendor} dans le fichier xorg.conf (ou dans un des fichiers de xorg.conf."
-"d/)."
-
+"supprimer la configuration de ${vendor} dans le fichier xorg.conf (ou dans "
+"un des fichiers de xorg.conf.d/)."
