add preliminary support for ppc64el, only supports CUDA/OpenCL
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6160 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nvidia-graphics-drivers (352.79-3) UNRELEASED; urgency=medium
 
-  * Update reportbug template to parse content of
+  [ Andreas Beckmann ]
+  * Add preliminary support for ppc64el, only supports CUDA/OpenCL.
+
+  [ Luca Boccassi ]
+  * Update reportbug template to include content of
     /etc/bumblebee/bumblebee.conf and /etc/bumblebee/xorg.conf.nvidia if
     they are present.
 
