generate an additional .orig-ppc64el tarball for ppc64el
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6162 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (352.79-3) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
+  * get-orig-source: Generate an additional .orig-ppc64el tarball for ppc64el.
   * Add preliminary support for ppc64el, only supports CUDA/OpenCL.
 
   [ Luca Boccassi ]
